# CloudCrypt

./: .gitignore  README.md  pyproject.toml  requirements.txt  uploadscript
.github/workflows/: CreateRelease.yml  Pylint.yml  TestCommit.yml  TestFull.yml  TestOnCommit.yml  TestPartial.yml  TestPerformance.yml
CloudCrypt/: BackupCreator.py  cloudcrypt.py  config.txt  cryptor.py  loader.py
CloudCrypt/subroutines/: Backup_Creator.py  ConfigManager.py  Exceptions.py  TaskScheduler.py  cryptor.py  loader.py
Test/: basetest.py  performance_test_encryption.py  reinstall_package_local.sh  test_backups.py  test_basics.py  test_cryptor.py  test_loader.py  test_performance.py  testconfig  testconfig.csv  testresults.csv  testresults_template.csv
Test/TestCloud/: gAAAAABooM7sDKs-gWeZMJz_GcoNTWSIwgsdercUm4YwpmRAltaTo9LUy2kVU4te7gDKG68TM6a_XFK8RDh14ofL9IhNtKNMFw==.cyacrypt  gAAAAABooM7sjX0LppXRj2gLFW2_Al831JCMhUk1qyqPw6aallQVPwH_28EVWYkfg7q_wx859zov1OnW8oTwJSlC9eU8cBoNng==.cyacrypt  gAAAAABouApAQZhNhyLXnAjrwEe9S5ci1tuQ3UcvxBXlfVfJK12VEJ-Pb8L3_UQyEXwgVeHHraqrPIhhZyo1kNMZcTfdIgvywg==.cloudcrypt  gAAAAABouApAgBqKyIsyiWlWAYxLq6EzW0yDCRHnLzcVejcEQVOzcnIA55XzpDWEbg1jy6cXT7N_6jwNWY9az69RFhz1tOFsyQ==.cloudcrypt  áÃßá·ËÓ»ÇÃUÙÕÇ.cyacrypt  áÃßá·áÃéáUáéá.cyacrypt
Test/etc/: create_performance_plot.py  reinstall_package_local.sh  run_tests.sh
src/: cloudcrypt.py
src/CloudCrypt/: cloudcrypt.py
src/CloudCrypt/subroutines/: Backup_Creator.py  Exceptions.py  TaskScheduler.py  loader.py
src/cloudcrypt/: __init__.py  __main__.py  config.csv
src/cloudcrypt/etc/: cloudcrypt.service  config  config.csv
src/cloudcrypt/subroutines/: Backup_Creator.py  ConfigManager.py  Scheduled.py  SetupVerifier.py  TaskScheduler.py  cryptor.py  loader.py
src/subroutines/: Backup_Creator.py  TaskScheduler.py  loader.py
test/: testkeys.keys
